Fix: correct test implementation and add utils

--- a/behave.ini
+++ b/behave.ini
@@ -4,3 +4,5 @@ format = pretty
 
 # Don't capture stdout, so print statements are visible immediately
 no-capture = true
+logging_level = DEBUG
+logging_capture = true
