Update tests, pages, and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,10 @@ desktop.ini
 TEST_RESULTS_ANALYSIS.md
 FIXES_SUMMARY.md
 FIXES_APPLIED.md
+
+# Project-specific documentation files (do not commit)
+FEEDBACK_VERIFIERING.md
+KRAVKONTROLL.md
+KRAVKONTROLL_SLUTGILTIG.md
+KRAVVERIFIERING.md
+SLUTGILTIG_KRAVKONTROLL.md
