--- a/behave.ini
+++ b/behave.ini
@@ -1,8 +1,8 @@
 [behave]
-# Define the format of the output
-format = pretty
-
-# Don't capture stdout, so print statements are visible immediately
-no-capture = true
-logging_level = DEBUG
-logging_capture = true
+color = True
+stdout_capture = False
+stderr_capture = False
+show_skipped = False
+paths = features
+# Standard: headless mode for fast execution
+userdata = headless=true
