--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,13 +18,13 @@ jobs:
       with:
         python-version: "3.10"
 
-    - name: Install dependencies
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Install Playwright browsers
-      run: playwright install --with-deps
+      run: playwright install chromium
 
     - name: Run Behave tests
       run: behave -D headless=true
